# PokeSpeare

./: .cov-report.json  .coveragerc  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  grafana-datasources.yml  pyproject.toml  setup.cfg  tempo.yaml
.github/workflows/: acceptance.yml  coverage-report.yml  deploy.yml
scripts/: coverage-shield.py
src/: main.py
src/pokespeare/adapters/: pokeapi_gateway.py  shakespeare_gateway.py
src/pokespeare/entities/: pokeapi_gateway.py  shakespeare_gateway.py
src/pokespeare/routers/: shakespearean_pokemon.py
src/pokespeare/use_cases/: translate_pokemon_description.py
src/routers/: shakespearean_pokemon.py
tests/: test_pokespeare.py
tests/adapters/: test_pokeapi_gateway.py  test_shakespeare_gateway.py
tests/routers/: test_shakespearean_pokemon.py
tests/use_cases/: test_translate_pokemon_description.py
