[tool.poetry]
name = "pokespeare"
version = "0.1.0"
description = ""
authors = ["nicolino"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
