[tool.poetry]
name = "pokespeare"
version = "0.1.0"
description = ""
authors = ["nicolino"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
httpx = "^0.16.1"
uvicorn = "^0.12.2"
opentelemetry-api = "^1.6.2"
opentelemetry-sdk = "^1.6.2"
opentelemetry-instrumentation-fastapi = "^0.25b2"
opentelemetry-exporter-otlp = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
respx = "^0.14.0"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.3.1"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
